package com.decorator;

/**
 * @author cuiliu
 */
public abstract class CondimentDecorator extends Beverage{
    public abstract String getDescription();
}
